src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Adjustments - 1 Queue</fullName>
        <description>Adj Case - Support Process for Adjustment Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Adjustments - 2 Queues</fullName>
        <description>Adj Case - Supports the need to route a case from the Rev Coll Queue to the SODA Queue</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Transfer to OSFA Team Leads - SODA</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Adjustments - Resident Referral</fullName>
        <description>Adj Case - Support Process for Resident Referral Adjustment Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Admin Requests</fullName>
        <description>Internal Adminstration Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Configuration Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Ready for Testing</fullName>
        </values>
        <values>
            <fullName>Ready to Submit</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CCC</fullName>
        <description>Customer Care Center Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cash Management</fullName>
        <description>Cash Management Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Move In Move Out</fullName>
        <description>Notice to Vacate + new move ins</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel - Associate</fullName>
        </values>
        <values>
            <fullName>Cancel - Legal</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AVB_Contact_Name__c</fullName>
        <label>AVB Associate (First &amp; Last Name)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVB_associate_email__c</fullName>
        <label>AVB associate email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Validate that if send date is today, eblast may not be sent today.</description>
        <inlineHelpText>All requests require 2 business days for processing.  If you indicate delivery for less, you must acknowledge that delivery isn&apos;t guarenteed within 2 days but will be attempted if possible.</inlineHelpText>
        <label>2 business day Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <description>Date Admin Request Configuration Changes were completed</description>
        <inlineHelpText>Enter the actual date the Admin Request Case was complete</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_MoveIn_Date__c</fullName>
        <label>Actual Move-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjusted_Amount_2__c</fullName>
        <description>Related to Correction_Type_2 and Original_Billing_Amount_2</description>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Amount_3__c</fullName>
        <description>Related to Correction_Type_3 and Original_Billing_Amount_3</description>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Amount_4__c</fullName>
        <description>Related to Correction_Type_4 and Original_Billing_Amount_4</description>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for case approval process.  This field will automatically populate with the user that will be designated to approve, if the one of the related case issues requires approval.</description>
        <label>Adjustment Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type_2__c</fullName>
        <description>One of possibly 4 Adjustment types on the Adjustment Case (Field Name = Adjustment_Type_2)</description>
        <label>Adjustment Type</label>
        <picklist>
            <controllingField>Case_Primary_Type__c</controllingField>
            <picklistValues>
                <fullName>Amenity Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enter Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas\Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTM Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Refundable Pet Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRU Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement/Additional Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reservation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type_3__c</fullName>
        <description>One of possibly 4 Adjustment types on the Adjustment Case (Field Name = Adjustment_Type_3)</description>
        <label>Adjustment Type</label>
        <picklist>
            <controllingField>Case_Primary_Type__c</controllingField>
            <picklistValues>
                <fullName>Amenity Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enter Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas\Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTM Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Refundable Pet Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRU Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement/Additional Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reservation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type_4__c</fullName>
        <description>One of possibly 4 Adjustment types on the Adjustment Case (Field Name = Adjustment_Type_4)</description>
        <label>Adjustment Type</label>
        <picklist>
            <controllingField>Case_Primary_Type__c</controllingField>
            <picklistValues>
                <fullName>Amenity Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enter Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas\Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTM Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Refundable Pet Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRU Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement/Additional Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reservation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Charge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Name2__c</fullName>
        <label>Applicant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Cancel_Date__c</fullName>
        <inlineHelpText>Enter the date the application was cancelled.</inlineHelpText>
        <label>Application Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Signed__c</fullName>
        <inlineHelpText>Was the application signed?</inlineHelpText>
        <label>Application Signed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <description>Value of Total Net Adjustment at the time of Final Approval.</description>
        <inlineHelpText>Value of Total Net Adjustment at the time of Final Approval.</inlineHelpText>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associates_Title__c</fullName>
        <inlineHelpText>Please enter the associate&apos;s job title (lease holder).</inlineHelpText>
        <label>Associate&apos;s Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount__c</fullName>
        <label>Referral Amount</label>
        <picklist>
            <picklistValues>
                <fullName>$250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Enter the community or phase ID (NY010, CA078)</inlineHelpText>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Reservation_Fee__c</fullName>
        <formula>IF(
ISPICKVAL (Lease_Signed__c, &quot;Yes&quot;), 
ROUND(Leased_Rent__c ,0), 
ROUND(((Leased_Rent__c  /  Days_in_App_Cancel_Month__c ) *  IF(Days_Off_Market__c &lt; 11, Days_Off_Market__c, 10)),0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Reservation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>CCC - CSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS Overhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - FS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVB Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Primary_Type__c</fullName>
        <description>**NOTE***  THE APPROVAL PROCESSES ARE BUILT AROUND THE PICKLIST ITEMS RELATED TO ADJ CASES.   As a result this field is very sensitive.  Please do not update without using great caution.</description>
        <label>Case Primary Type</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>30 Day Move-In Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept with Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Adjustment per Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Lease Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Refund of Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction of Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Charged Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Final Billing Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fee Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Termination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move-In Pro-Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice to Vacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF Notification Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Amenity Fee Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Incorrect MTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Waive MTM Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reservation Fees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Subtype__c</fullName>
        <label>Case Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amenity Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTM Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Resident_on_Completed_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Resident on Completed Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct_FinalBillingDate__c</fullName>
        <description>Adjustment Case - Field utilized to capture the accurate final billing date when entering a Primary Case Type equal to &quot;Incorrect Final Billing&quot;</description>
        <label>Correct Final Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>TEXT(   Contact.Customer_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Deposited__c</fullName>
        <label>Date Deposited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken_Off_Market__c</fullName>
        <inlineHelpText>Enter the date that the PBU or NRU was taken off the market.</inlineHelpText>
        <label>Date taken off the Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Off_Market__c</fullName>
        <formula>Application_Cancel_Date__c - Date_Taken_Off_Market__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Off Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_App_Cancel_Month__c</fullName>
        <formula>Case(MONTH( Application_Cancel_Date__c ),
1, 31,
2, IF(OR(MOD(YEAR(Application_Cancel_Date__c),400)=0,AND(MOD(YEAR(Application_Cancel_Date__c),4)=0,MOD(YEAR(Application_Cancel_Date__c),100)&lt;&gt;0)),29, 28),
3, 31,
4, 30,
5, 31,
6, 30,
7, 31,
8, 31,
9, 30,
10, 31,
11, 30,
12, 31, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in App Cancel Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dep_Adj_Type__c</fullName>
        <description>Adjustment Case - Field use to indicate type of action required for the Deposit Adjustment</description>
        <inlineHelpText>Select the type of Deposit Adjustment to be completed.</inlineHelpText>
        <label>Deposit Adjustment Type</label>
        <picklist>
            <controllingField>Case_Primary_Type__c</controllingField>
            <picklistValues>
                <fullName>Charge or Adjust Deposit per Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Original Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease Original Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer within Same Customer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer into New Customer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Double Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Describe_Security_Requirements__c</fullName>
        <label>Describe Security Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eblast_Audience_Distribution_list__c</fullName>
        <description>Determines how to set SF report to filter out email addresses</description>
        <inlineHelpText>Ex.  All residents, Buildings 1-9, etc.  This information will always be obtained right from Salesforce.</inlineHelpText>
        <label>eBlast Audience/Distribution</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eblast_Contents__c</fullName>
        <description>paste email contents</description>
        <inlineHelpText>paste email contents here.  No Images.  
Please limit the use of special characters and fonts as your email will be delivered under AVB standards.  Be sure to include a signature line</inlineHelpText>
        <label>eBlast Contents including signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Eblast_Date_to_send__c</fullName>
        <label>eBlast Date to Send</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eblast_Subject_Line__c</fullName>
        <label>eBlast Subject Line</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <label>Email Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>Level of Effort in Hours</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_MoveIn_Date__c</fullName>
        <label>Expected Move-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Level__c</fullName>
        <label>Feedback Level</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Descriptions__c</fullName>
        <description>This field should be utilized to capture new field names and descriptions related to the Custom Object.</description>
        <inlineHelpText>Enter the field names and descriptions for each new field on the new custom object.</inlineHelpText>
        <label>Field Descriptions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Billing_Date_2__c</fullName>
        <label>First Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Billing_Date_3__c</fullName>
        <label>First Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Billing_Date__c</fullName>
        <description>Adjustment Case - Double Charged Fees - First Billing Date</description>
        <label>First Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Billing_Dep__c</fullName>
        <label>First Billing (Dep)</label>
        <type>Date</type>
    </fields>
</CustomObject>